renamed prefix to mtcl

--- a/gen/Makefile
+++ b/gen/Makefile
@@ -1,5 +1,5 @@
-PARSE_NAME=scriptEvalParse
-EXPR_PARSE_NAME=scriptExprParse
+PARSE_NAME=mtclEvalParse
+EXPR_PARSE_NAME=mtclExprParse
 OUTDIR=tmp
 
 .PHONY: all
@@ -8,9 +8,9 @@ all: $(OUTDIR)/$(PARSE_NAME).c $(OUTDIR)/$(EXPR_PARSE_NAME).c
 $(OUTDIR)/$(PARSE_NAME).c : eval.rl
 	mkdir -p $(OUTDIR)
 	ragel -C $< -o $@
-	gcc -g $@ -DSCRIPT_EVAL_PARSE_TEST -o $(OUTDIR)/evalParseTest
+	gcc -g $@ -DMTCL_EVAL_PARSE_TEST -o $(OUTDIR)/evalParseTest
 
 $(OUTDIR)/$(EXPR_PARSE_NAME).c : expr.rl
 	mkdir -p $(OUTDIR)
 	ragel -C $< -o $@
-	gcc -g $@ -DSCRIPT_EXPR_PARSE_TEST -o $(OUTDIR)/exprParseTest 
+	gcc -g $@ -DMTCL_EXPR_PARSE_TEST -o $(OUTDIR)/exprParseTest 
